--- a/assets/css/splitlayout.css
+++ b/assets/css/splitlayout.css
@@ -66,7 +66,7 @@
 	/* Intro content, profile image and name, back button */
 	.intro-content {
 		position: absolute;
-		top: 50%;
+		top: 35%;
 		left: 50%;
 		padding: 0 1em;
 		width: 50%;
